--- a/BLOGN.Data/BLOGN.Data.csproj
+++ b/BLOGN.Data/BLOGN.Data.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\BLOGN.Models\BLOGN.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
